--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,12 +14,14 @@
         <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+            android:textColor="#FF0000"
     android:text="안녕하세요."/>
 
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#FFBF00"
             android:text="반갑습니다."/>
 
 
